tests/paczka1/small_fuzzy/98048838.err
Error in line 1: tI0YpZid S309 0,4
Error in line 5: tI0YpZid S18p 50,5
Error in line 6: PhEn0mp1 S519 48,2
Error in line 16: UEkOIYTdg S519 03
